--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "eslint-config-robyn",
 	"version": "3.4.0",
+	"type": "commonjs",
 	"description": "Robyn Style - Shareable Configs",
 	"repository": {
 		"type": "git",
@@ -63,91 +64,92 @@
 	],
 	"scripts": {
 		"clean": "rm -fr node_modules pnpm-lock.yaml",
-		"eslint": "eslint -f friendly --color --max-warnings 0 --no-error-on-unmatched-pattern",
+		"eslint": "eslint -f pretty --color --max-warnings 0 --no-error-on-unmatched-pattern",
 		"eslint:config": "eslint --print-config",
-		"find-deprecated-rules": "node tests/deprecated.cjs",
-		"find-new-rules": "eslint-find-rules -i deprecated -u configs/all.cjs",
-		"find-unset-rules": "node tests/unset.cjs",
 		"format": "pnpm prettier -w '{**/.*,.*,**/*,*}'",
 		"format:check": "pnpm prettier:check '{**/.*,.*,**/*,*}'",
 		"ignore-sync": "ignore-sync .",
 		"install:clean": "pnpm clean && pnpm i",
-		"lint": "pnpm eslint '{**/.*,.*,**/*,*}.{cjs,html,js,jsx,md,mjs,ts,tsx,vue}'",
+		"lint": "echo 'Linting ...'; pnpm --silent eslint '{**/.*,.*,**/*,*}.{c[jt]s,html,js?(x),md,m[jt]s,ts?(x),vue}'",
 		"lint:config": "pnpm eslint:config index.cjs",
-		"prepare": "node scripts/is-dependency.cjs || is-ci || husky install",
+		"prepare": "scripts/is-dependency.cjs || is-ci || husky install",
 		"prettier": "prettier -u",
 		"prettier:check": "pnpm prettier -c",
 		"release": "standard-version -s",
-		"test": "pnpm find-new-rules && pnpm find-deprecated-rules && pnpm lint"
+		"test": "scripts/test.sh"
 	},
 	"peerDependencies": {
-		"eslint": "^8.15.0",
-		"prettier": "^2.6.2",
-		"typescript": "^4.6.4",
 		"vue-eslint-parser": "^9.0.2"
 	},
 	"peerDependenciesMeta": {
-		"typescript": {
-			"optional": true
-		},
 		"vue-eslint-parser": {
 			"optional": true
 		}
 	},
 	"dependencies": {
-		"@prettier/plugin-php": "^0.18.6",
+		"@prettier/plugin-php": "^0.18.7",
 		"@prettier/plugin-ruby": "^3.1.2",
 		"@prettier/plugin-xml": "^2.2.0",
-		"@typescript-eslint/eslint-plugin": "^5.26.0",
-		"@typescript-eslint/parser": "^5.26.0",
+		"@typescript-eslint/eslint-plugin": "^5.27.1",
+		"@typescript-eslint/parser": "^5.27.1",
 		"confusing-browser-globals": "^1.0.11",
-		"eslint-config-prettier": "^8.5.0",
+		"eslint": "^8.17.0",
+		"eslint-formatter-pretty": "^4.1.0",
 		"eslint-import-resolver-typescript": "^2.7.1",
+		"eslint-plugin-ava": "^13.2.0",
 		"eslint-plugin-eslint-comments": "^3.2.0",
 		"eslint-plugin-import": "^2.26.0",
-		"eslint-plugin-jest": "^26.2.2",
-		"eslint-plugin-jest-dom": "^4.0.2",
-		"eslint-plugin-jest-formatting": "^3.1.0",
 		"eslint-plugin-lodash": "^7.4.0",
 		"eslint-plugin-markdown": "^2.2.1",
-		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-n": "^15.2.2",
+		"eslint-plugin-no-use-extend-native": "^0.5.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-promise": "^6.0.0",
 		"eslint-plugin-security": "^1.5.0",
 		"eslint-plugin-simple-import-sort": "^7.0.0",
-		"eslint-plugin-testing-library": "^5.5.1",
 		"eslint-plugin-unicorn": "^42.0.0",
-		"eslint-plugin-vue": "^9.0.1",
+		"eslint-plugin-vue": "^9.1.0",
 		"eslint-plugin-you-dont-need-lodash-underscore": "^6.12.0",
+		"eslint-plugin-you-dont-need-momentjs": "^1.6.0",
 		"glob": "^8.0.3",
 		"globals": "^13.15.0",
 		"linguist-languages": "^7.15.0",
 		"lodash": "^4.17.21",
+		"postcss": "^8.4.14",
+		"postcss-html": "^1.4.1",
+		"postcss-scss": "^4.0.4",
+		"prettier": "^2.6.2",
 		"prettier-plugin-pkg": "^0.13.2",
-		"prettier-plugin-sh": "^0.11.0",
+		"prettier-plugin-sh": "^0.10.2",
 		"prettier-plugin-sql": "^0.7.0",
 		"read-pkg-up": "^7.0.1",
-		"stylelint": "^14.8.5",
+		"stylelint": "^14.9.0",
+		"stylelint-config-html": "^1.0.0",
 		"stylelint-config-prettier": "^9.0.3",
-		"stylelint-prettier": "^2.0.0"
+		"stylelint-config-recommended": "^8.0.0",
+		"stylelint-config-recommended-scss": "^6.0.0",
+		"stylelint-config-recommended-vue": "^1.4.0",
+		"stylelint-config-standard": "^26.0.0",
+		"stylelint-config-standard-scss": "^4.0.0",
+		"stylelint-config-standard-vue": "^1.0.0",
+		"stylelint-order": "^5.0.0",
+		"stylelint-prettier": "^2.0.0",
+		"stylelint-scss": "^4.2.0",
+		"typescript": "^4.7.3",
+		"webpack": "^5.73.0"
 	},
 	"devDependencies": {
-		"@commitlint/cli": "^17.0.1",
-		"@commitlint/config-conventional": "^17.0.0",
-		"@types/eslint": "^8.4.2",
-		"eslint": "^8.16.0",
+		"@commitlint/cli": "^17.0.2",
+		"@commitlint/config-conventional": "^17.0.2",
+		"@types/eslint": "^8.4.3",
+		"eslint-config-prettier": "^8.5.0",
 		"eslint-find-rules": "^4.1.0",
-		"eslint-formatter-friendly": "^7.0.0",
 		"husky": "^8.0.1",
 		"ignore-sync": "^5.0.1",
 		"is-ci": "^3.0.1",
-		"jest": "^28.1.0",
-		"lint-staged": "^12.4.2",
-		"npm-run-all": "^4.1.5",
-		"prettier": "^2.6.2",
+		"lint-staged": "^13.0.1",
 		"standard-version": "^9.5.0",
 		"synchronized-promise": "^0.3.1",
-		"typescript": "^4.7.2",
 		"vue-eslint-parser": "^9.0.2"
 	}
 }
