--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,1 +1,11 @@
-{}
+{
+	"compilerOptions": {
+		"newLine": "lf",
+		"noFallthroughCasesInSwitch": true,
+		"noImplicitReturns": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"strict": true,
+		"target": "es2018"
+	}
+}
