--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,12 +21,18 @@ jobs:
                     - 16
                     - 18
         steps:
-            - uses: actions/checkout@v3
-            - uses: actions/setup-node@v2
+            - name: "Checkout Code"
+              uses: actions/checkout@v3
+            - name: "Setup Node"
+              uses: actions/setup-node@v2
               with:
                   node-version: "${{ matrix.node-version }}"
-            - run: "corepack enable"
-            - run: "corepack prepare --activate pnpm@7.2.1"
+            - name: "Enable Corepack"
+              run: "corepack enable"
+            - name: "Activate PNPM"
+              run: "corepack prepare --activate pnpm@7.2.1"
             - run: "pnpm config set store-dir .pnpm-store"
-            - run: "pnpm install --force"
-            - run: "pnpm test"
+            - name: "Install Dependencies"
+              run: "pnpm install --force"
+            - name: "Test Code"
+              run: "pnpm test"
