--- a/package.json
+++ b/package.json
@@ -66,11 +66,11 @@
 		"clean": "rm -fr node_modules yarn.lock",
 		"eslint": "eslint -f pretty --color --no-error-on-unmatched-pattern",
 		"eslint:config": "eslint --print-config",
-		"format": "yarn prettier -w '{**/.*,.*,**/*,*}'",
-		"format:check": "yarn prettier:check '{**/.*,.*,**/*,*}'",
+		"format": "yarn prettier -w .",
+		"format:check": "yarn prettier:check .",
 		"ignore-sync": "ignore-sync .",
 		"install:clean": "yarn clean && yarn install",
-		"lint": "echo 'Linting ...'; yarn eslint '{**/.*,.*,**/*,*}.{c[jt]s,html,js?(x),md,m[jt]s,ts?(x),vue}'",
+		"lint": "echo 'Linting ...'; yarn eslint --ext .cjs,.cts,.html,.js,.jsx,.md,.mjs,.mts,.ts,.tsx,.vue --fix .",
 		"lint:config": "yarn eslint:config index.cjs",
 		"prepare": "scripts/is-dependency.cjs || is-ci || husky install",
 		"prettier": "prettier -u",
