--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
 		"clean": "rm -fr node_modules yarn.lock",
 		"eslint": "eslint -f pretty --color --no-error-on-unmatched-pattern",
 		"eslint:config": "eslint --print-config",
-		"format": "yarn prettier -w .",
+		"eslint:fix": "yarn eslint --fix",
+		"format": "yarn prettier:write .",
 		"format:check": "yarn prettier:check .",
 		"ignore-sync": "ignore-sync .",
 		"install:clean": "yarn clean && yarn install",
@@ -76,6 +77,7 @@
 		"prepare": "scripts/is-dependency.js || is-ci || husky install",
 		"prettier": "prettier -u",
 		"prettier:check": "yarn prettier -c",
+		"prettier:write": "yarn prettier -w",
 		"release": "bin/release.sh",
 		"test": "scripts/test.sh"
 	},
@@ -116,7 +118,7 @@
 		"lodash": "^4.17.21",
 		"prettier": "^2.7.1",
 		"prettier-plugin-pkg": "^0.16.0",
-		"prettier-plugin-sh": "^0.12.6",
+		"prettier-plugin-sh": "^0.10.2",
 		"prettier-plugin-sql": "^0.9.0",
 		"read-pkg-up": "^7.0.1",
 		"typescript": "^4.7.4"
